Add code for testing with demo data

--- a/demo_covid_mock.ipynb
+++ b/demo_covid_mock.ipynb
@@ -131,7 +131,7 @@
     {
      "data": {
       "text/plain": [
-       "<py2neo.database.Cursor at 0x7f45d2284b38>"
+       "<py2neo.database.Cursor at 0x7fc6c40a64e0>"
       ]
      },
      "execution_count": 7,
@@ -141,7 +141,8 @@
    ],
    "source": [
     "query = \"\"\"\n",
-    "MATCH (p:Person)-[a]->(m)\n",
+    "MATCH (p:Person)\n",
+    "OPTIONAL MATCH (p)-[a]->(m)\n",
     "RETURN  p,\n",
     "        id(p) as p_id,\n",
     "        a, \n",
@@ -162,7 +163,7 @@
     "def get_node_info(node, node_id):\n",
     "    gr = ''.join(str(node.labels).split(':'))\n",
     "    if node['level']:\n",
-    "        gr = gr + node['level'].replace(\" \",\"\")\n",
+    "        gr = node['level'].replace(\" \",\"\") + gr\n",
     "    return {\"id\": node_id, \"label\": node['name'], \"group\": gr, \"title\": repr(node['name'])}"
    ]
   },
@@ -178,14 +179,14 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"800\"\n",
-       "            src=\"figure/graph-fcd5d685-1980-4620-bf62-15ab530ae8ec.html\"\n",
+       "            src=\"figure/graph-adc632fa-851b-4634-8236-756e295e1803.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f45d2292128>"
+       "<IPython.lib.display.IFrame at 0x7fc6b3860588>"
       ]
      },
      "execution_count": 9,
@@ -208,15 +209,15 @@
     "    m_id = row[4]\n",
     "    \n",
     "    p_info = get_node_info(p, p_id)\n",
-    "    m_info = get_node_info(m, m_id)\n",
-    "\n",
     "    if p_info not in nodes:\n",
     "        nodes.append(p_info)\n",
-    "    \n",
-    "    if m_info not in nodes:\n",
-    "        nodes.append(m_info)\n",
-    "    \n",
-    "    edges.append({\"from\": p_info[\"id\"], \"to\": m_info[\"id\"], \"label\": type(a).__name__, \"color\": { \"background\": '#000000',} })\n",
+    "         \n",
+    "    if m:\n",
+    "        m_info = get_node_info(m, m_id)\n",
+    "        if m_info not in nodes:\n",
+    "            nodes.append(m_info)\n",
+    "\n",
+    "        edges.append({\"from\": p_info[\"id\"], \"to\": m_info[\"id\"], \"label\": type(a).__name__})\n",
     "    \n",
     "a = vis_network(nodes, edges, physics=physics)\n",
     "a\n",
